--- a/templates/basefeedback.html
+++ b/templates/basefeedback.html
@@ -96,7 +96,7 @@
 <section class="footer">
 
     <div class="text">
-      <marquee width="100%" direction="right" >Developed by : Harshvardhan Patil , Jaid Nayakawadi , Sahil Shete , Prasad Nasikkar</marque>
+      <marquee width="100%" direction="right" >Developed by (TY-CSE 2022-23): Harshvardhan Patil , Jaid Nayakawadi , Sahil Shete , Prasad Nasikkar</marque>
     </div>
   
   </section> 
