--- a/templates/questions.html
+++ b/templates/questions.html
@@ -8,7 +8,7 @@ Questions
 <!--main body --> 
 <div id="main">
     <h2>Questions</h2>
-    <p>Click on the element below to open the side navigation menu, and push this content to the right.</p>
+    <p>Questions which should be visible during feedback should be added here .( Questions limit is 10)</p>
 
 
     <button id="addButton"  class="btn btn-outline-secondary" type="button">Add</button><br><br>
@@ -31,7 +31,7 @@ Questions
     </div>
 
     <caption>List of Questions</caption>
-    <table class="table caption-top bord" style="  color:var(--tabel-text-color);">
+    <table class="table caption-top bord animate__animated animate__fadeInUp animate__slow" style="  color:var(--tabel-text-color);">
     
       <thead class="tab-dark " >
         <tr>
