--- a/templates/subject.html
+++ b/templates/subject.html
@@ -18,7 +18,7 @@
 <!--main body --> 
 <div id="main">
     <h2>Subject</h2>
-    <p>Click on the element below to open the side navigation menu, and push this content to the right.</p>
+    <p>You can add subjects data for your department here.</p>
 
     <button id="addButton"  class="btn btn-outline-secondary" type="button">Add</button><br><br>
 
@@ -115,7 +115,7 @@
     </div>
     
     <caption>List of Subjects</caption>
-    <table class="table caption-top bord" style="color: var(--table-text-color);">
+    <table class="table caption-top bord animate__animated animate__fadeInUp animate__slow" style="color: var(--table-text-color);">
     
       <thead class="tab-dark">
         <tr>
