--- a/templates/teaching record.html
+++ b/templates/teaching record.html
@@ -19,7 +19,7 @@
 <!--main body --> 
 <div id="main">
     <h2> Teaching record</h2>
-    <p>Click on the element below to open the side navigation menu, and push this content to the right.</p>
+    <p>You can assign subjects to faculty as per batch , divsion for your department here .</p>
     <button id="addButton"  class="btn btn-outline-secondary" type="button">Add</button><br><br>
     <div id="formContainer" class="container add-block" style="max-width: 600px; height: auto; padding: 15px 50px; border-radius: 10px; overflow:hidden; display: none;">
       <form action="/add_trec" method="POST" id="myForm" >
@@ -126,7 +126,7 @@
         </select>
       </div>
     <caption>List of Teaching record</caption>
-    <table class="table caption-top bord" style="color: var(--table-text-color);">
+    <table class="table caption-top bord animate__animated animate__fadeInUp animate__slow" style="color: var(--table-text-color);">
     
       <thead class="tab-dark">
         <tr>
