--- a/templates/base.html
+++ b/templates/base.html
@@ -27,6 +27,34 @@
   />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <!--LINKS CLOSE-->
+
+
+
+
+
+
+<!-- Font Awesome -->
+<link
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+  rel="stylesheet"
+/>
+<!-- Google Fonts -->
+<link
+  href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+  rel="stylesheet"
+/>
+<!-- MDB -->
+<link
+  href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/#[[latestVersion]]#/mdb.min.css"
+  rel="stylesheet"
+/><!-- MDB -->
+<script
+  type="text/javascript"
+  src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/#[[latestVersion]]#/mdb.min.js"
+></script>
+
+
+
 </head>
 <body style="max-width:100%; overflow-x:scroll; " {% block bv %} {% endblock bv %}>
 
@@ -74,10 +102,10 @@
                   </li>
                 </a>
                   {% endif %}
-                <li class="sub-item">
+               <!-- <li class="sub-item">
                   <span class="material-icons-outlined"> grid_view </span>
                   <p>Dashboard</p>
-                </li>
+                </li>-->
               
                 <a href="{{ url_for('logout') }}" class="sub-link"> <li class="sub-item"> 
                   <span class="material-icons-outlined"> logout</span>
@@ -139,10 +167,10 @@
       <i class="fas fa-book"></i>
       Subject
   </a>
-  <a href="{{ url_for('student') }}" {% if request.path == url_for('student') %} class="active"{% endif %}>
+ <!-- <a href="{{ url_for('student') }}" {% if request.path == url_for('student') %} class="active"{% endif %}>
       <i class="fas fa-user-graduate"></i>
       Student
-  </a>
+  </a>-->
   <a href="{{ url_for('teaching') }}" {% if request.path == url_for('teaching') %} class="active"{% endif %}>
       <i class="fas fa-clipboard-list"></i>
       Teaching record
@@ -177,7 +205,7 @@
 <section class="footer">
 
     <div class="text">
-      <marquee width="100%" direction="right" >Developed by : Harshvardhan Patil , Jaid Nayakawadi , Sahil Shete , Prasad Nasikkar</marque>
+      <marquee width="100%" direction="right" >Developed by (TY-CSE 2022-23): Harshvardhan Patil , Jaid Nayakawadi , Sahil Shete , Prasad Nasikkar</marque>
     </div>
   
   </section> 
