--- a/templates/thankyou.html
+++ b/templates/thankyou.html
@@ -36,7 +36,46 @@
     opacity: 1;
   }
 }
+/* CSS */
+.button-55 {
+  align-self: center;
+  background-color: #fff;
+  background-image: none;
+  background-position: 0 90%;
+  background-repeat: repeat no-repeat;
+  background-size: 4px 3px;
+  border-radius: 15px 225px 255px 15px 15px 255px 225px 15px;
+  border-style: solid;
+  border-width: 2px;
+  box-shadow: rgba(0, 0, 0, .2) 15px 28px 25px -18px;
+  box-sizing: border-box;
+  color: #41403e;
+  cursor: pointer;
+  display: inline-block;
+  font-family: Neucha, sans-serif;
+  font-size: 1rem;
+  line-height: 23px;
+  outline: none;
+  padding: .75rem;
+  text-decoration: none;
+  transition: all 235ms ease-in-out;
+  border-bottom-left-radius: 15px 255px;
+  border-bottom-right-radius: 225px 15px;
+  border-top-left-radius: 255px 15px;
+  border-top-right-radius: 15px 225px;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
 
+.button-55:hover {
+  box-shadow: rgba(0, 0, 0, .3) 2px 8px 8px -5px;
+  transform: translate3d(0, 2px, 0);
+}
+
+.button-55:focus {
+  box-shadow: rgba(0, 0, 0, .3) 2px 8px 4px -6px;
+}
 	</style>
 	<link rel="stylesheet" href="https://2-22-4-dot-lead-pages.appspot.com/static/lp918/min/default_thank_you.css">
 	<script src="https://2-22-4-dot-lead-pages.appspot.com/static/lp918/min/jquery-1.9.1.min.js"></script>
@@ -49,7 +88,7 @@
         count--;
         if (count < 0) {
             clearInterval(countdown); // stop the countdown timer
-            var studentLoginWindow = window.open('/student_login', '_blank'); // open student login page in new tab
+            var studentLoginWindow = window.open('/student_verify', '_self'); // open student login page in new tab
             studentLoginWindow.focus(); // switch focus to new tab
             window.close(); // close current tab
         }
@@ -59,6 +98,9 @@
         e.preventDefault();
     });
 }
+
+
+
     
     </script>
 </head>
@@ -69,8 +111,15 @@
 
 	<div class="main-content">
 		<i class="fa fa-check main-content__checkmark animated" id="checkmark"></i>
-		<p class="main-content__body animated" data-lead-id="main-content-body"> Thank you for submitting feedback. You will be redirected to student login in <span id="countdown"></span> seconds.</p>
-	</div>
+		
+  <p class="main-content__body animated" data-lead-id="main-content-body"> Thank you for submitting feedback. You will be redirected to student login in <span id="countdown"></span> seconds.</p>
+
+</div>
+
+  <!-- HTML !-->
+
+
+
    
 </body>
 </html>
