--- a/static/css/main.css
+++ b/static/css/main.css
@@ -443,9 +443,21 @@ header .image-text .profession {
   padding-left: 0px;
   z-index: 9999999;
 }
+.code{
+  transition: ease-in-out .5s;
 
+}
+.code:hover{
+  transform: scale(1.2);
 
+  text-shadow: 0px 7px 5px var(--text-color);
+ 
+}
 
+.relo:hover i {
+  transform: rotate(360deg);
+  transition: all 0.5s ease-in-out;
+}
 /*sidebar*/
 .sidenav {
     height: 87%;
@@ -458,7 +470,7 @@ header .image-text .profession {
     overflow-x: hidden;
     overflow-y: hidden;
     transition: 0.5s;
-    padding-top: 10px;
+    padding-top: 1px;
   }
   
   .sidenav a {
